--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Program debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/build/src/star-tracker",
+            "program": "${workspaceRoot}/build/src/neural",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
