--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(star-tracker)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_compile_options(-Wall -Werror -O0 -ggdb -Wno-unknown-pragmas)
+add_compile_options(-Wall -O0 -ggdb -Wno-unknown-pragmas)
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND NOT BUILD_TESTING)
     set(BUILD_TESTING ON)
